--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -2,7 +2,7 @@ name: Deploy Frontend (Flutter Web)
 on:
   workflow_dispatch: {}
   push:
-    branches: [ main ]   # opcional: deploy automático ao dar push na main
+    branches: [ main ]
 
 concurrency:
   group: deploy-frontend
@@ -24,18 +24,18 @@ jobs:
           flutter build web --release --web-renderer canvaskit \
             --dart-define=API_BASE_URL=/api
 
-      - name: Add known_hosts
+      # Prepara a chave SSH a partir do Secret e adiciona o host na known_hosts
+      - name: Prepare SSH key
         run: |
           mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p "${{ secrets.SSH_PORT || 22 }}" -H "${{ secrets.SSH_HOST }}" >> ~/.ssh/known_hosts
 
-      - name: Deploy via rsync
-        uses: burnett01/rsync-deployments@v6.0
-        with:
-          switches: -avzr --delete
-          path: build/web/
-          remote_path: /var/www/pinacle.com.br/
-          remote_host: ${{ secrets.SSH_HOST }}
-          remote_user: ${{ secrets.SSH_USER }}
-          remote_key:  ${{ secrets.SSH_KEY }}
-          remote_port: ${{ secrets.SSH_PORT || 22 }}
+      # Faz o deploy com rsync nativo
+      - name: Deploy with rsync
+        run: |
+          rsync -avzr --delete \
+            -e "ssh -i ~/.ssh/id_rsa -p ${{ secrets.SSH_PORT || 22 }}" \
+            build/web/ \
+            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/pinacle.com.br/
